--- a/lab6/bai4.html
+++ b/lab6/bai4.html
@@ -17,6 +17,7 @@
             background-image: url('imgTest.jfif');
             background-position: center right;
             background-repeat: no-repeat;
+            background-size: 50px;
         }
     </style>
 </head>
